# Budget-Planer

./: .gitignore  README.md  TAURI_SETUP.md  build.ps1  build.sh  release.ps1  release.sh  setup-backend.ps1  start.ps1  start.sh
.github/workflows/: release.yml
backend/: backend.spec  manage.py  requirements.txt  server.py
backend/config/: asgi.py  settings.py  urls.py  wsgi.py
backend/core/: admin.py  exception_handler.py  logging_filters.py  middleware.py  models.py  patches.py  serializers.py  tests.py  urls.py  utils.py  views.py
backend/core/migrations/: 0001_initial.py  0002_budgetcategory_custom_months_and_more.py  0003_taxentry.py  0004_salaryreduction.py  0005_budgetcategory_custom_start_month.py  0006_monthlyactualbalance.py  0007_remove_budget_year.py
data/: sample_budget_data.json
frontend/: index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  i18n.ts  index.css  vite-env.d.ts
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/resources/: backend-server
frontend/src-tauri/src/: lib.rs
frontend/src/components/: ActualBalanceCell.tsx  BalanceDifferenceCard.tsx  BudgetCard.tsx  BudgetGraphs.tsx  BudgetSummary.tsx  BudgetTable.tsx  CategoryRow.tsx  Header.tsx  Layout.tsx  LoadingScreen.tsx  MonthlyCell.tsx  SalaryReductionsSection.tsx  TaxesSection.tsx
frontend/src/contexts/: DarkModeContext.tsx
frontend/src/pages/: BudgetDashboard.tsx  BudgetEditor.tsx  MonthlyView.tsx
frontend/src/services/: api.ts
(+5 files in other folders)
